--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ align-items: stretch;
     min-height:100px;
     width:100%;
     flex:1;
-    margin:flex;
+    display:flex;
     flex-direction:row;
 }
 .lightblue {
